--- a/index.html
+++ b/index.html
@@ -2,41 +2,56 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/script.js"></script>
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Pontano+Sans" rel="stylesheet">
-    <title>Salary Calculator</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/script.js"></script>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Pontano+Sans" rel="stylesheet">
+  <title>Salary Calculator</title>
 </head>
 
 <body>
-  <header>
-    <h1>Salary Calculator</h1>
-  </header>
+  <container class="container">
+    <header class="header">
+      <h1>Salary Calculator</h1>
+    </header>
+    <nav class="nav">
+      <div id="dataInput">
 
-  <main>
-    <table id="salaryTable">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>First name</th>
-          <th>Last name</th>
-          <th>Job title</th>
-          <th>Annual salary</th>
-        </tr>
-      </thead>
-      <tbody id="salaryBody">
-        <tr>
-          <td></td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>
-  </main>
+        <input id="firstname" type="text" placeholder="First name">
+        <input id="lastname" type="text" placeholder="Last name">
+        <input id="jobtitle" type="text" placeholder="Job title">
+        <input id="annualsalary" type="text" placeholder="Annual salary">
+        <button type="button" id="btnSubmit" class="addButton">Submit</button>
+      </div>
+    </nav>
+    <!--create input form(table) including:
+  _employee first name, last name,
+  ID number, job title, annual salary_ -->
+    <main>
+      <table id="salaryTable">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>First name</th>
+            <th>Last name</th>
+            <th>Job title</th>
+            <th>Annual salary</th>
+          </tr>
+        </thead>
+        <tbody id="salaryBody">
+          <tr>
+            <td><input type="checkbox" name="chkRemove"></td>
 
+          </tr>
+        </tbody>
+      </table>
+      <button type="button" id="deleteRow" class="button">Delete Row</button>
+    </main>
+    <footer class="footer"></footer>
+  </container>
 </body>
 
 </html>
