added monthly salery

--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
         <input id="lastname" type="text" placeholder="Last name">
         <input id="jobtitle" type="text" placeholder="Job title">
         <input id="annualsalary" type="text" placeholder="Annual salary">
+        <!-- <input type="text" id="monthly" type="text"
+        placeholder="Monthly salary"> -->
         <button type="button" id="btnSubmit" class="addButton">Submit</button>
       </div>
     </nav>
     <!--create input form(table) including:
   _employee first name, last name,
   ID number, job title, annual salary_ -->
-    <main>
+    <main id="main">
       <table id="salaryTable">
         <thead>
           <tr>
@@ -39,6 +41,7 @@
             <th>Last name</th>
             <th>Job title</th>
             <th>Annual salary</th>
+            <th>Monthly salary</th>
           </tr>
         </thead>
         <tbody id="salaryBody">
